Further Lighthouse experiments

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     <!--google maps api-->
     <script src="https://maps.googleapis.com/maps/api/js?key=<%= GOOGLE_ACCOUNT.maps_key %>&amp;libraries=geometry"></script>
     <!--[if lt IE 10]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
+    <noscript><p class="no-script">You appear to have <strong>JavaScript</strong> disabled. This website requires JavaScript -- please enable and retry.</p></noscript>
     <container>
       <div class="ng-loading">
         <img class="ng-loading-image" src="assets/images/loading.gif" alt="Loading..."/>
