--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,6 @@
         <img class="ng-loading-image" src="assets/images/loading.gif" alt="Loading..."/>
       </div>
     </app-container>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=<%= GOOGLE_ACCOUNT.analytics %>"></script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
   </body>
 </html>
