--- a/src/index.dev.html
+++ b/src/index.dev.html
@@ -57,7 +57,7 @@
     <noscript><p class="no-script">You appear to have <strong>JavaScript</strong> disabled. This website requires JavaScript &ndash; please enable and retry.</p></noscript>
     <app-container>
       <div class="ng-loading">
-        <img class="ng-loading-image" src="assets/images/loading.gif" alt="Loading..."/>
+        <img class="ng-loading-image" src="/assets/images/loading.gif" alt="Loading..."/>
       </div>
     </app-container>
   </body>
