--- a/src/index.dev.html
+++ b/src/index.dev.html
@@ -31,7 +31,7 @@
         overflow: hidden;
         margin: 0 auto !important;
         background: #262B37;
-        height: 100%
+        height: 100%;
       }
       .ng-loading-image {
         position: relative;
@@ -39,18 +39,19 @@
         height: 40px;
         top: calc(50% - 20px);
         left: calc(50% - 20px);
-        display: block
+        display: block;
       }
       .browsehappy, .no-script {
         background: #262B37;
         text-align: center;
-        padding: 20px
+        padding: 20px;
+        margin: 0;
       }
       .browsehappy a, .no-script a {
-        color: #00bdbd
+        color: #00bdbd;
       }
       .browsehappy a:hover, .no-script a:hover {
-        text-decoration: underline
+        text-decoration: underline;
       }
     </style>
     <!--[if lt IE 10]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
