--- a/src/404.html
+++ b/src/404.html
@@ -9,12 +9,27 @@
     <meta name="robots" content="noindex, nofollow">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,600" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900,300,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Ultra" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,600"
+          rel="stylesheet"
+          type="text/css"
+          integrity="sha384-BZ1ixrX8OnRAa5n6JcbzRzULQdAEbt6kgZMlR8NbtlJvfpuSCxgya6QF0DpBozNp"
+          crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900,300,700"
+          rel="stylesheet"
+          type="text/css"
+          integrity="sha384-Zec72V+hSrx4/GKBCxJY/aXgraUsNegz0wUiyJveokg5eS3DEhuLPKJqUpKB0wOt"
+          crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Ultra"
+          rel="stylesheet"
+          type="text/css"
+          integrity="sha384-Z9YN5b5UcWxVe7NzxQeNoPzapC6kqQG80Ycf858bdGIAvXpJ5cGo0OF0oECfM73H"
+          crossorigin="anonymous">
 
     <!-- Latest compiled and minified Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+          integrity="sha384-pdapHxIh7EYuwy6K7iE41uXVxGCXY0sAjBzaElYGJUrzwodck3Lx6IE2lA0rFREo"
+          crossorigin="anonymous">
 
     <!-- Core CSS -->
     <style>
